# autoembed

./: .gitignore  Dockerfile  README.md  check_cuda.py  eval_heldout.py  eval_ref.py  gpu.sh  instructions.md  parse_trace.py  prepare.py  program.md  pyproject.toml  reference.py  run_task.sh  score.py  task.py  timer.sh  timestamp_lines.py  train.py
agents/claude/: solve.sh
agents/codex/: solve.sh
agents/gemini/: solve.sh
runs/: leaderboard.md
