[project]
name = "autoembed"
version = "0.1.0"
description = "Karpathy-style auto-research loop for embedding models, scored on MTEB"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=5.0",
    "mteb>=1.12",
    "torch>=2.2",
    "datasets>=2.19",
    "accelerate>=0.30",
]

[tool.uv]
# Pin nothing aggressively here; resolve on the GPU box where CUDA torch lives.
