[project]
name = "autoembed"
version = "0.1.0"
description = "Agentic embedding-model training benchmark, scored on MTEB"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=5.0",
    "mteb>=1.12",
    "torch>=2.2,<2.10",
    "datasets>=2.19",
    "accelerate>=0.30",
]

[tool.uv]
# torch is pinned to a CUDA wheel index so the GPU is actually used (the default
# index can resolve a wheel your driver rejects -> silent CPU fallback). The pin
# below targets CUDA 12.8; change the index URL to match your driver, or drop
# the [tool.uv.sources]/[[tool.uv.index]] blocks to use the default wheel.

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
